fix: update status card styles for improved layout and readability

--- a/app/Dashboard/static/css/dashboard.css
+++ b/app/Dashboard/static/css/dashboard.css
@@ -450,20 +450,15 @@ p {
   margin-top: 20px;
 }
 
-/* .status-card {
+.status-card {
   flex: 1;
   min-width: 150px;
   margin: 10px;
   padding: 20px;
-  background-color: #f8f9fa;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
 .dark-mode .status-card {
-  background-color: black;
-  box-shadow: 0px 0px 10px #cccccc90;
   color: #ccc;
 }
 
@@ -475,7 +470,7 @@ p {
 .status-card span {
   display: block;
   font-size: 16px;
-} */
+}
 
 .status-count {
   font-size: 18px;
